root div overflow hidden 'home-page side scoll issue fix'

--- a/client/src/styles/globalStyles.css
+++ b/client/src/styles/globalStyles.css
@@ -24,6 +24,10 @@
     display: inline-flex;
 }
 
+#root {
+  overflow: hidden;
+}
+
 .row:after {
   content: "";
   display: table;
